<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shengyao.jiang@rwth-aachen.de">Shengyao Jiang</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/Fliesen"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/rooms"/>
    <gazebo_ros gazebo_media_path="${prefix}/models/Fliesen"/>
    <gazebo_ros gazebo_media_path="${prefix}/models/zed_mini"/>
  </export>
</package>
